[metadata]
name = xxhzj
version = 0.3
author = hdlr
author_email = 1079489986@qq.com
description = 消息轰炸机
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hhd2009/Python/tree/package/%E6%B6%88%E6%81%AF%E8%BD%B0%E7%82%B8%E6%9C%BA
project_urls =
    Bug Tracker = https://github.com/hhd2009/Python/issues/1
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src